--- a/courses/conf/application.conf
+++ b/courses/conf/application.conf
@@ -5,7 +5,7 @@
 # ~~~~~
 # The secret key is used to secure cryptographics functions.
 # If you deploy your application to several instances be sure to use the same key!
-application.secret="K2:HD1SdBM>OBfPM9tFAqW:/@B<G0bd2>xkp`6<L/ny;?C2/MTSpKbtXnXUh^Cxo"
+application.secret="_7>uf:qBNOu>yfm[[71hu[@02kZra`K`b;EecS/Sv;>N39cGePKacFN/9kPZ7o_9"
 
 # The application languages
 # ~~~~~
@@ -22,6 +22,10 @@ application.langs="en"
 # You can declare as many datasources as you want.
 # By convention, the default datasource is named `default`
 #
+db.default.driver=com.mysql.jdbc.Driver
+db.default.url="mysql://root:root@localhost/phdcoursedb"
+#db.default.user=root
+#db.default.password=root
 # db.default.driver=org.h2.Driver
 # db.default.url="jdbc:h2:mem:play"
 # db.default.user=sa
@@ -40,7 +44,8 @@ application.langs="en"
 # You can declare as many Ebean servers as you want.
 # By convention, the default server is named `default`
 #
-# ebean.default="models.*"
+# 
+ebean.default="models.*"
 
 # Logger
 # ~~~~~
@@ -55,3 +60,4 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+module.db=${play.path}/modules/db
