Creato form esempio per inserimento nuovo corso

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ courses/.settings/
 courses/modules/auth/.classpath
 courses/modules/auth/.project
 courses/modules/auth/.settings/
+courses/.cache
