--- a/courses/conf/application.conf
+++ b/courses/conf/application.conf
@@ -23,7 +23,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="mysql://root:pwd@localhost/phdcoursedb"
+db.default.url="mysql://root:root@localhost/phdcoursedb"
 #db.default.user=root
 #db.default.password=root
 # db.default.driver=org.h2.Driver
