--- a/courses/conf/application.conf
+++ b/courses/conf/application.conf
@@ -45,8 +45,8 @@ db.default.url="mysql://root:root@localhost/phdcoursedb"
 # By convention, the default server is named `default`
 #
 # 
-#ebean.default="models.*"
-ebean.default="models.Country, models.FundingInstitution, models.University, models.CourseEnrollment, models.Student, models.UserCredentials, models.Course, models.Supervisor, models.UserRole, models.Trip"
+ebean.default="models.*"
+#ebean.default="models.Country, models.FundingInstitution, models.University, models.CourseEnrollment, models.Student, models.UserCredentials, models.Course, models.Supervisor, models.UserRole, models.Trip"
 
 # Logger
 # ~~~~~
