--- a/courses/conf/application.conf
+++ b/courses/conf/application.conf
@@ -60,3 +60,22 @@ logger.play=INFO
 
 # Logger provided to your application:
 logger.application=DEBUG
+
+#email configuration
+
+email.smpt="smtp.gmail.com"
+email.user="infophddisi@gmail.com"
+email.subject.SPapproved="Your study plan has been approved"
+email.subject.SPrejected="Your study plan has been REJECTED"
+email.subject.SPrequest="Request for study plan approval"
+email.subject.SPnotification="Request for study plan"
+email.pwd="infophddisi2012"
+#TLS-STARTTLS
+email.authProtocol="TLS"
+email.port=587
+#SSL
+#email.authProtocol="SSL"
+#email.port=465
+#default
+#email.authProtocol="DEFAULT"
+#email.port=25
