cambio email, prova notification

--- a/courses/conf/application.conf
+++ b/courses/conf/application.conf
@@ -69,6 +69,11 @@ email.subject.SPapproved="Your study plan has been approved"
 email.subject.SPrejected="Your study plan has been REJECTED"
 email.subject.SPrequest="Request for study plan approval"
 email.subject.SPnotification="Request for study plan"
+email.body.SPrequest="I've defined my study plan. Please check it!\n"
+email.body.SPnotification="You don't have defined a study plan yet!\nPlease check it soon."
+email.sendReport.advisor="Your email has correctly sent"
+email.sendReport.admin="The students will receive an email soon."
+email.sendReport.student="Your email has correctly sent"
 email.pwd="infophddisi2012"
 #TLS-STARTTLS
 email.authProtocol="TLS"
