--- a/courses/conf/application.conf
+++ b/courses/conf/application.conf
@@ -23,7 +23,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="mysql://root:root@localhost/phdcoursedb"
+db.default.url="mysql://naseg:.naseg.@test.liquidpub.org/phdcourse_naseg"
 #db.default.user=root
 #db.default.password=root
 # db.default.driver=org.h2.Driver
@@ -37,7 +37,7 @@ db.default.url="mysql://root:root@localhost/phdcoursedb"
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
-# evolutionplugin=disabled
+evolutionplugin=disabled
 
 # Ebean configuration
 # ~~~~~
